<package>
    <name>robotiq_2f_driver</name>
    <version>0.0.1</version>
    <description>Drivers and nodes related to the Robotiq 2 Finger Gripper</description>
    
    <maintainer email="dev@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>
    <author>Patrick Hussey</author>

    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Packages needed to run but not to build-->
    <run_depend>robotiq_2f_msgs</run_depend>

	<export>
	</export>
</package>
