<?xml version="1.0"?>
<package>
  <name>robotiq_2f_gripper</name>
  <version>0.0.0</version>
  <description>Robotiq 2FingerGripper Package</description>
  <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotiq_2f_driver</run_depend>
  <run_depend>robotiq_2f_msgs</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
